legacy/v1.3.1-beta/README.zh-CN.md
# B站屏蔽助手

这是我自己在用的一个 B 站网页端扩展。给不想看的视频标题加几个关键词，它们就从页面上消失；另外也能按分区屏蔽直播、番剧这类推广内容。

Manifest V3，Edge 和 Chrome 都能装，纯 JavaScript，没有运行时依赖。

![version](https://img.shields.io/badge/version-1.3.1-orange)
![browser](https://img.shields.io/badge/Edge%20%7C%20Chrome-Chromium-00aeec)
![tests](https://img.shields.io/badge/tests-244%20passed-brightgreen)

---

## 安装

1. 到 [Releases](https://github.com/ke25019/bili-title-filter/releases) 下载最新那个 zip，解压到一个固定的目录（别放下载文件夹里，容易被清理掉）
2. Edge 打开 `edge://extensions/`，左下角打开「开发人员模式」
3. 点「加载解压缩的扩展」，选择解压出来、里面有 `manifest.json` 的那一层目录

Chrome 用 `chrome://extensions/`，步骤一样。

装好之后打开 B 站，标题栏附近会出现一个「屏蔽助手」按钮。点它可以拖到任意位置，位置会记住。

---

## 怎么用

点浏览器工具栏的图标，或者点 B 站页面上那个「屏蔽助手」按钮，都能打开设置。最常用的就一个输入框：把不想看的词打进去、回车。也支持一次贴多个，用逗号或空格分开。

匹配方式可以调：区分大小写、按正则匹配、是否连 UP 主名字一起匹配。改动立刻生效，已经打开的 B 站页面会自动重新扫一遍。

---

## UP 白名单

有些 UP 的视频不管标题写成什么样都想留着，那就把 TA 加进白名单。

名单里填 **UP 名字**，要和卡片上显示的完全一致（不分大小写），比如 `某某UP主`。

名单里的 UP **不会被屏蔽** —— 关键词和分区开关都对 TA 无效，已经屏蔽过的也会立刻恢复显示。设置页和页面内面板里都能加，面板里是一行输入框 + 回车。

---

## 两种屏蔽效果

**整体遮蔽** —— 封面和标题合并成一整块，上面写着「根据您的屏蔽词已将此视频屏蔽」。鼠标移上去会自动把视频露出来，移开又恢复。文案可以自己改。

**完全隐藏** —— 视频直接不显示了。这里我默认按最早那版（v1.0.0）的做法来：只把内容藏起来、**位置留空**。这样页面不会重排，也不会把 B 站末尾那些空的骨架占位块顶到内容中间来。

如果你更想要紧凑的效果，可以在面板里关掉「隐藏时保留原位置」，卡片就会整个从布局里拿掉，后面的内容往前补位。两种都行，看你习惯哪个。

---

## 屏蔽分区推广

除了按标题，还能整类屏蔽这些推广：直播、番剧、国创、电影、电视剧、纪录片、综艺、课堂、专栏、动态、漫画、游戏、音乐、赛事、会员购、活动、广告。

番剧、国创、综艺、电影这几类是分开的，可以只屏蔽其中一类。

最后还有一个「其他推广」的兜底，用来收掉那些不属于上面任何一类的推广卡片（比如客户端下载、其它频道的推广）。它只在这张卡没有命中上面任何一类时才生效——所以你把「直播」关掉，不会被兜底规则又抓回来。

首页顶部那个大轮播横幅是单独一个开关，只作用于首页那一块，跟上面的勾选互不影响。

识别分区卡片这件事我没有写死某一个 class，判断顺序是：

1. 先看封面左上角的分区徽标：B 站自己把「番剧 / 国创 / 综艺 / 电影 / 赛事…」标在卡片上，这是最可靠的判据
2. 没有徽标时看卡片里的链接指向哪（`live.bilibili.com`、`/bangumi/play/`、`/cheese/play/`……）
3. 已知的卡片类名优先（`.feed-card`、`.bili-video-card` 这些）
4. 有些区域用的是 BEM 命名，就把 `bili-live-card__image--link` 这种子元素回推到卡片根
5. 都不是的话，往上找到第一层「同时包含标题和封面」的元素当卡片本体
6. 顶栏导航和几个藏着隐藏推广链接的区域是明确排除的

为什么先看徽标：实测番剧、国创、综艺、电影的推广卡片，链接**全都是** `//www.bilibili.com/bangumi/play/epXXXX`，光看链接根本分不出是哪一类；赛事卡片则多半是「直播预约」，链接落在直播间。只按链接判定就会出现「开番剧把国创综艺电影一起屏蔽」「赛事开关点了没反应」。

判断不出来的时候我宁愿不屏蔽，也不想把页面搞乱。所以有几个安全阀：容器里还装着别的卡片、尺寸超过 1200×800 或视口面积的 35%、元素尺寸是 0——任一命中就直接跳过。

---

## 页面上的悬浮面板

不想每次都开扩展设置页，所以我做了一个页面内面板。切到「完全隐藏」时，里面会多出「隐藏时保留原位置」这个开关。

面板可以按住拖动，位置存在浏览器里，底部有「重置位置」可以回到默认的标题栏右侧。

---

## 深色模式

遮蔽区域和面板会跟着 B 站的深色模式走。判断方式是看 `<html>` 上的 `dark` 属性 / `data-theme` / class，兜底再看页面背景色的亮度。也可以手动锁定成浅色或深色。

---

## 目录结构

```
bili-title-filter/
├── manifest.json          扩展清单
├── background.js          Service Worker：统计、徽标、默认值
├── shared/defaults.js     默认配置 + 分区类型定义（含识别规则）
├── content/
│   ├── content.js         扫描、匹配、屏蔽，以及页面内的悬浮面板
│   └── content.css        遮蔽区域、隐藏、深色模式的样式
├── popup/                 工具栏弹窗
├── options/               完整设置页
├── tests/                 jsdom 测试脚本（不参与扩展运行）
├── legacy/                旧版本源码归档，每个子目录都能单独加载
└── icons/
```

---

## 自己跑测试

```bash
cd tests
npm install
npm test
```

一共 244 项校验，覆盖屏蔽逻辑、分区识别、两种隐藏行为、设置页交互和后台统计。

测试里的模拟 DOM 和尺寸都是从真实页面上量出来的（`.floor-card-inner > .cover-container + .pb-16.px-12 > p.title` 这种工具类结构、`.vui_carousel` 包裹的轮播、`.palette-button-inner` 里 0×0 的隐藏链接等等）。

需要真实浏览器才能复现的问题，我用 `tests/browser-harness/` 里的脚本起一个独立的无头 Edge 来看，它只会关掉自己那个 profile 的进程。

---

## 常见问题

**勾了某个分区，但页面上还有该分区的内容？**
分区屏蔽现在只做卡片级。判断不出「封面 + 标题」在哪张卡上时我会直接跳过，所以少量结构特殊的推广位可能不会被处理。如果那是首页顶部的大轮播图，用那个单独的开关。

**有些推广卡片不属于我列的任何一类？**
打开「其他推广」兜底。它只在这张卡没命中具体分区时才生效。

**为什么有的视频没被屏蔽？**
先确认关键词确实在标题里。开了「区分大小写」或「正则」的话匹配会更严。也可以在设置页打开调试日志，在 B 站页面的控制台看命中情况。

**会不会拖慢页面？**
扫描用的是 `MutationObserver` 加 180ms 防抖，只处理新增或被改动的卡片。分区识别只在你开了对应开关时才跑，而且有数量和频率上限。

**统计数字比实际看到的多？**
B 站是单页应用，滚动和切页会让卡片重新渲染，所以统计的是「屏蔽次数」的近似值。

---

## 更新记录

按时间倒序。这里记的是每次改了什么、为什么改，包括我自己搞错的地方。

### 1.3.1

**新增 UP 白名单。** 名单里的 UP 不会被屏蔽 —— 关键词和分区开关都对 TA 无效，已经屏蔽过的也会立刻恢复。名单项填 UP 名字，要和卡片上显示的完全一致（不分大小写）。设置页有词条列表 + 批量编辑，页面内面板里也加了一行，和屏蔽词一样回车就能加。

顺手把面板里那句多余的提示删了：遮蔽模式下它也跟着显示（「开启：视频不显示但位置留空……」），可那个开关只对完全隐藏有意义，看着莫名其妙。

**首页顶部轮播横幅改成跟随屏蔽方式。** 以前这个开关只做一件事：给 `.vui_carousel` 加 `display:none`。可实测 B 站这里 `.carousel`、`.carousel-container`、`.vui_carousel` 三层都是 `height:100%`，只隐藏最里面那层，外层会留下一个空白框；而且它消失得无声无息，没有任何说明。现在：**完全隐藏** 时一路处理到外层 `.carousel`，整块真的收起来、页面不留空白；**整体遮蔽** 时跟卡片一样盖一块说明，写清「已按开关屏蔽首页顶部轮播横幅」以及怎么恢复。

### 1.3.0

**分区推广改成看封面左上角的徽标来分类。** 以前按卡片里的链接判定，可两张链接一模一样的卡片可能属于不同分区：实测番剧、国创、综艺、电影的推广卡片，链接**全都是** `//www.bilibili.com/bangumi/play/epXXXX`；赛事卡片则多半是「直播预约」，链接落在直播间。结果是「番剧」开关把国创、综艺、电影一起屏蔽了，而「赛事」开关点了完全没反应。现在先看 B 站自己标在封面上的分区名，认不出来再退回链接和类名判定。

**「影视」拆成了四个开关，并新增「国创」。** 分区从 14 类变 18 类：直播、番剧、国创、电影、电视剧、纪录片、综艺、课堂、专栏、动态、漫画、游戏、音乐、赛事、会员购、活动、广告，外加「其他推广」兜底。以前开「番剧」会连带屏蔽国创、综艺、电影，开「影视」会连带屏蔽电视剧、纪录片、综艺；现在每一类单独开关。

注意：老配置里的「影视」只对应新的「电影」，「番剧」不再连带国创，电视剧、纪录片、综艺默认关闭，需要的话单独打开。

### 1.2.0

1.1.x 系列转为正式版，内容与 1.1.12-beta 一致，只把版本号定为 1.2.0。

**外层容器的隐藏样式一直没生效。** CSS 里写的是 `.bf-blocked.bf-hide` 和 `.bf-blocked.bf-hide-slot`，而外层容器（`.floor-card` 那层带边框、白底和 40px 阴影的盒子）只会拿到 `bf-hide` / `bf-hide-slot`，永远没有 `bf-blocked` —— 类名打上了，样式一条都没命中。结果就是卡片内容消失、白壳还留在页面上，也就是反馈里说的「占位符没删干净」。现在这两条规则改成裸类名：保留位置时对元素自身 `visibility:hidden`，前移补位时 `display:none`，边框、背景、阴影和背后的灰层一起消失。

**分区徽标被当成了视频标题。** 封面左上角的徽标是 `.badge > .floor-title`，跟标题选择器同名，而且就在封面链接内部。后果有两个：卡片识别在封面链接上就停下，把一个链接当成一整张卡片；关键词拿到的「标题」其实是「番剧」这类分区名，真正的标题被完全忽略。现在徽标文字一律不算标题。

**直播推广卡片识别不出来。** 标题判据里有一条「标题元素的后代不超过 4 个」，而直播卡片的标题里带着「直播中」角标 —— `<div class="living">` 套 `<picture>`，里面还有两个 `<source>` 和一个 `<img>`，再加上 `<span>`，实测 8 个后代元素，整条标题直接被判掉，卡片因此完全识别不出来。上限按实测值放宽到 12，直播卡片正常命中。

**分区推广卡片的发现路径。** 筛候选卡片时不再只看设置里打开的那几个分区开关（否则只开「直播」时，番剧等推广卡片永远扫不到）；懒加载插入的推广卡片会立刻触发一次扫描，不用等滚动。

### 1.1.11

按提示去翻了 bilibili.com 的页面源码，把用灰色占位色（`--graph_bg_regular`）的元素都列了出来：`.floor-card`（带边框和阴影）、`.recommended-swipe-body`（左上角大块里铺满灰底的 body）、`.layer.tiny`、`.bili-video-card__image--wrap`、`.v-img`、各种 `__skeleton--*`，以及轮播里空的 `.extension-tips-v2`。

它们全都藏在卡片容器里面，所以要靠「隐藏卡片时把容器一起处理」来覆盖。上一版的做法有个漏洞：**容器里装着不止一张卡片时我会提前停下**，于是容器自己的灰底就露出来了。现在改成——只要容器里的卡片**全都被隐藏了**，而且除了这些卡片没有别的真实内容，就继续往上把容器一起处理。容器的判定每次都会重算，所以同一容器里第二张卡被隐藏时容器也会跟着藏起来。

顺带发现一个更要紧的问题：尺寸安全阀原来定的是「超过 1100×700 或视口 15% 就跳过」，而左上角那个 2 列大块实测是 580×485、约占视口 25% —— **意味着那个位置里的视频从来就没被屏蔽过**。现在放宽到 1200×800 / 35%，既能覆盖它，也仍然拦得住真正的灾难（实测过的 1401×808 整页容器）。
### 1.1.10

有人在反馈里贴了一张截图，上面那条淡边线让我找到了问题。B 站的分区推广卡片外面还套着一层 `.floor-card`，带边框、白底和 40px 阴影，而卡片本体在里面。我之前只把隐藏打在本体上，所以内容没了、外壳还留在页面上——保留位置和前移补位两种模式都有这个问题。

现在会从卡片往上找到「只装着这一张卡」的最外层容器，隐藏时一起处理：保留位置时给它 `visibility:hidden`（边框、背景、阴影一起消失，位置还留着），前移补位时给它 `display:none`（整个网格项拿掉，不留空框）。

### 1.1.9

修上一版留下的白色空盒子。之前「保留位置」是把卡片的**子元素**藏起来，卡片自己的背景和边框还在，看起来就是个空的白盒子。v1.0.0 之所以自然，是因为它藏的是里面那张卡、外层没有背景。现在改成对卡片自身 `visibility:hidden`，位置留着、连背景边框一起消失。

### 1.1.8

把「前移补位」这条路径整个过了一遍，修掉五个问题：找网格只看直接父元素（隔一层就找不到）、每次都先清空类再加（滚动时抖）、判定空占位要求没有 `<img>`（带未加载图片的骨架漏判）、只扫直接子元素（嵌在楼层里的漏掉）、以及无差别隐藏空元素（可能藏掉撑高度的容器）。另外把定时复核从 2.5s 收到 1.5s。

### 1.1.7

收到反馈说只有 v1.0.0 的完全隐藏好用，我就把两个版本用同一份真实 DOM 跑起来对比，找到了原因：v1.1.0 我把 `.bili-feed-card` 加进了卡片选择器，隐藏目标从「卡片内容」变成了「整个网格项」，网格因此重排，腾出的格子被 B 站末尾的空骨架占位块填上。于是加了「隐藏时保留原位置」开关，默认按 v1.0.0 的行为来。

### 1.1.6

修一个我自己引入的 bug：尺寸安全阀用「命中原因是否相同」做判断，而完全隐藏时卡片是 `display:none`（尺寸为 0），命中词一变就会被安全阀拒绝处理，切回遮蔽后卡片再也不恢复。顺带发现 `hasLayoutEngine()` 的结果被永久缓存，如果第一次调用时 `body` 还没渲染好，安全阀会整场失效。

### 1.1.5

修完全隐藏时内容中间冒出的灰色空块。B 站的推荐流网格末尾放着一批只含骨架屏的空占位项，我把前面的卡片隐藏后，网格会把它们拉到前面填空。现在在「前移补位」模式下会把这类空占位项一起收敛（加载哨兵只做隐身、保留布局盒，不影响继续加载）。

### 1.1.4

用无头 Edge 实测后重写了分区识别。之前「活动」一开就整页被过滤——从隐藏的 0×0 推广链接向上跳了三层，落到了一个 1401×808 的侧边按钮容器上。分区推广的封面和标题之前也被分开遮蔽（真实卡片用的是工具类名，不是 BEM）。这一版把「整行板块」删掉了，改成单独的「屏蔽首页顶部轮播横幅」开关。

### 1.1.3

第一次补分区类型（9 类补到 14 类，加了「其他推广」兜底），也想修页面空白的问题——但没修对，真正的根因是 1.1.4 才找到的。

### 1.1.0

分区推广屏蔽之前完全没效果，因为只按 class 判断。这一版改成从卡片里的链接反推类型。同时把整体遮蔽改成鼠标悬停自动展示，悬浮按钮也支持拖动了。

### 1.0.0

第一个版本：按标题屏蔽词屏蔽视频，两种屏蔽方式，9 类分区推广，页面内面板，深色模式。

---

## 许可证

本项目基于 [Apache License 2.0](LICENSE) 发布。

你可以自由使用、修改和分发本软件（包括商业用途），需要保留原始版权声明与许可证文件。

Copyright (c) 2026 ke25019

---

## 免责声明

1. **非官方工具**：本项目为个人开源项目，与哔哩哔哩（B站）官方无任何关联，未获得 B站的官方授权或认可。
2. **使用风险**：本工具通过注入脚本修改 B站页面内容，可能违反 B站《用户使用协议》中关于禁止使用自动化脚本获取或干预平台内容的相关条款。用户应自行评估使用风险。
3. **数据安全**：本扩展仅读取页面本地数据用于过滤操作，不收集、不上传任何用户个人信息至外部服务器。
4. **责任限制**：本软件按“原样”提供，不提供任何明示或暗示的担保。作者不对因使用本工具导致的账号封禁、数据丢失或其他损失承担责任。
